# ComfyUI-CC-API

./: .gitignore  README.md  __init__.py  config.ini  config.ini.example  pyproject.toml  requirements.txt
API文档/: Seedream 4.0.txt  Seedream 4.0流式响应.txt
example_workflows/: Seedream-4.0-Image-to-Image.json  Seedream-4.0-Text-to-Image.json
js/: minimax_voice_selector.js  qwen3_tts_preview.js  vidu_q1_node.js
locales/en/: main.json  nodeDefs.json
locales/zh/: main.json  nodeDefs.json
nodes/: audio_utils.py  cc_utils.py  doubao_tts_mix_node.py  doubao_tts_node.py  doubao_voices.json  doubao_voices_updated.json  kling_ppio_node.py  minimax_hailuo23_ppio_node.py  minimax_hailuo_ppio_node.py  minimax_ppio_node.py  minimax_tts_node.py  minimax_voice_clone_node.py  pixverse_ppio_node.py  ppio_task_result_node.py  qwen3_tts_node.py  seedance_ppio_node.py  seedream_fal_node.py  seedream_node.py  seedream_ppio_node.py  tools_node.py  vidu_q1_node.py  wan_ppio_node.py
