[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui-cc-api"
version = "0.1.0"
description = "ComfyUI custom nodes for calling various APIs"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.28.0",
    "Pillow>=9.0.0",
    "numpy>=1.21.0",
    "torch>=1.12.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/comfyui-cc-api"
"Bug Tracker" = "https://github.com/yourusername/comfyui-cc-api/issues"